Change to relative path

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section class="main__content">
             <h1 class="main__subtitle">About the Musicians</h1>
             <div class="image__container">
-                <img src="/assets/images/band.jpg" alt="Musicians-image" class="musician__image main__subtitle--margin">
+                <img src="./assets/images/band.jpg" alt="Musicians-image" class="musician__image main__subtitle--margin">
             </div>
             <div class="musician__text">
                 <p class="musician__quote">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”</p>
@@ -59,16 +59,16 @@
         <section class="gallery__background main__content">
             <h1 class="main__subtitle">Photo Gallery</h1>
             <div class="photogallery">
-                <img src="/assets/images/Photo-gallery-1.jpg" alt="pink power in air" class="photo photo-filter">
-                <img src="/assets/images/Photo-gallery-2.jpg" alt="girl dancing" class="photo photo-filter">
-                <img src="/assets/images/Photo-gallery-3.jpg" alt="hands in air" class="photo photo-filter">
-                <img src="/assets/images/Photo-gallery-4.jpg" alt="girl backview" class="photo photo-filter">
-                <img src="/assets/images/Photo-gallery-5.jpg" alt="hands in air with colorful ribbon in air"
+                <img src="./assets/images/Photo-gallery-1.jpg" alt="pink power in air" class="photo photo-filter">
+                <img src="./assets/images/Photo-gallery-2.jpg" alt="girl dancing" class="photo photo-filter">
+                <img src="./assets/images/Photo-gallery-3.jpg" alt="hands in air" class="photo photo-filter">
+                <img src="./assets/images/Photo-gallery-4.jpg" alt="girl backview" class="photo photo-filter">
+                <img src="./assets/images/Photo-gallery-5.jpg" alt="hands in air with colorful ribbon in air"
                     class="photo photo-filter">
-                <img src="/assets/images/Photo-gallery-6.jpg" alt="singer" class="photo photo-filter">
-                <img src="/assets/images/Photo-gallery-7.jpg" alt="concert scene" class="photo photo-filter">
-                <img src="/assets/images/Photo-gallery-8.jpg" alt="JD keyboard" class="photo photo-filter">
-                <img src="/assets/images/Photo-gallery-9.jpg" alt="hands in air with white ribbon"
+                <img src="./assets/images/Photo-gallery-6.jpg" alt="singer" class="photo photo-filter">
+                <img src="./assets/images/Photo-gallery-7.jpg" alt="concert scene" class="photo photo-filter">
+                <img src="./assets/images/Photo-gallery-8.jpg" alt="JD keyboard" class="photo photo-filter">
+                <img src="./assets/images/Photo-gallery-9.jpg" alt="hands in air with white ribbon"
                     class="photo photo-filter">
             </div>
         </section>
@@ -103,11 +103,11 @@
             <h1 class="footer__subtitle">Get in Touch</h1>
             <div class="apps">
                 <a href="https://www.instagram.com">
-                    <img class="social-media__logo" src="/assets/Icons/SVG/Icon-instagram.svg" alt="instagram"></a>
+                    <img class="social-media__logo" src="./assets/Icons/SVG/Icon-instagram.svg" alt="instagram"></a>
                 <a href="https://www.facebook.com">
-                    <img class="social-media__logo" src="/assets/Icons/SVG/Icon-facebook.svg" alt="facebook"></a>
+                    <img class="social-media__logo" src="./assets/Icons/SVG/Icon-facebook.svg" alt="facebook"></a>
                 <a href="https://www.yelp.com">
-                    <img class="social-media__logo" src="/assets/Icons/SVG/Icon-twitter.svg" alt="twitter"></a>
+                    <img class="social-media__logo" src="./assets/Icons/SVG/Icon-twitter.svg" alt="twitter"></a>
             </div>
             <h1><a href="index.html" class="copyright--tablet">BANDSITE</a></h1>
         </section>
