--- a/pages/shows.html
+++ b/pages/shows.html
@@ -62,11 +62,11 @@
             <h1 class="footer__subtitle">Get in Touch</h1>
             <div class="apps">
                 <a href="https://www.instagram.com">
-                    <img class="social-media__logo" src="/assets/Icons/SVG/Icon-instagram.svg" alt="instagram"></a>
+                    <img class="social-media__logo" src="../assets/Icons/SVG/Icon-instagram.svg" alt="instagram"></a>
                 <a href="https://www.facebook.com">
-                    <img class="social-media__logo" src="/assets/Icons/SVG/Icon-facebook.svg" alt="facebook"></a>
+                    <img class="social-media__logo" src="../assets/Icons/SVG/Icon-facebook.svg" alt="facebook"></a>
                 <a href="https://www.yelp.com">
-                    <img class="social-media__logo" src="/assets/Icons/SVG/Icon-twitter.svg" alt="twitter"></a>
+                    <img class="social-media__logo" src="../assets/Icons/SVG/Icon-twitter.svg" alt="twitter"></a>
             </div>
             <h1 class="copyright--tablet">BANDSITE</h1>
         </section>
